[package]
name = "bevy-mod-indigauge"
version = "0.1.0"
edition = "2024"

[features]
default = ["panic_handler"]
panic_handler = ["dep:ureq", "dep:cookie_store"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_window", "bevy_ui", "sysinfo_plugin", "bevy_picking", "bevy_ui_picking_backend"] }
bevy_mod_reqwest = { version = "0.18" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
rand = "0.8"
thiserror = "1"
crossbeam-channel = "0.5"
dirs = "6"
ureq = { version = "3.1", features = ["json"], optional = true }
cookie_store = { version = "0.22", optional = true }
bevy_text_edit = "0.5"

[dev-dependencies]
bevy = { version = "0.15" }
