[package]
name = "bevy-mod-indigauge"
version = "0.1.0"
edition = "2024"

[features]
default = ["panic_handler"]
panic_handler = ["dep:ureq"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_window",
  "bevy_ui",
  "sysinfo_plugin",
  "bevy_picking",
  "bevy_ui_picking_backend"
]}
bevy_mod_reqwest = { version = "0.18" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
crossbeam-channel = "0.5"
dirs = "6"
bevy_text_edit = "0.5"
image = "0.24"

ureq = { version = "3.1", features = ["json"], optional = true }
# cookie_store = { version = "0.22", optional = true }

[dev-dependencies]
bevy = { version = "0.15" }

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "breakout"
path = "examples/breakout.rs"
